@@ -13,7 +13,6 @@ set(DumpRenderTree_SOURCES
 
 set(DumpRenderTree_LIBRARIES
     JavaScriptCore
-    WTF
     WebCoreTestSupport
 )
 
