@@ -79,6 +79,7 @@ list(APPEND DumpRenderTree_INCLUDE_DIRECTORIES
 )
 
 list(APPEND DumpRenderTree_LIBRARIES
+    WTF
     WebKit
     shlwapi
 )
